draft-packages/guidance-block/KaizenDraft/GuidanceBlock/GuidanceBlock.scss
@import "~@kaizen/design-tokens/sass/color-vars";
@import "~@kaizen/design-tokens/sass/shadow-vars";
@import "~@kaizen/design-tokens/sass/spacing-vars";
@import "~@kaizen/design-tokens/sass/animation-vars";
@import "~@kaizen/design-tokens/sass/layout-vars";
@import "~@kaizen/design-tokens/sass/border-vars";
@import "~@kaizen/component-library/styles/responsive";
@import "~@kaizen/component-library/components/Button/styles";

$heightConstraint: 12.25rem;
$ca-banner-fade-out: opacity $kz-var-animation-duration-slow ease;
$ca-banner-collapse-height-delayed: margin-top $kz-var-animation-duration-fast
  $kz-var-animation-duration-slow ease;

.banner.noMaxWidth {
  max-width: inherit;
}

.banner {
  display: flex;
  flex-direction: column;
  background: $kz-var-color-white;
  min-width: 320px;
  max-width: $kz-var-layout-breakpoints-large;
  border: $kz-var-border-borderless-border-width
    $kz-var-border-borderless-border-style
    $kz-var-border-borderless-border-color;
  border-radius: $kz-var-border-solid-border-radius;
  padding: $kz-var-spacing-sm;
  box-shadow: $kz-var-shadow-small-box-shadow;
  position: relative;
  top: -1px;
  transition: $ca-banner-fade-out, $ca-banner-collapse-height-delayed;
  color: $kz-var-color-wisteria-800;

  @include ca-media-desktop {
    min-height: $heightConstraint;
    box-sizing: border-box;
    flex-direction: row;
    width: auto;
    align-items: center;

    > * {
      padding: $kz-var-spacing-sm;
    }
  }
}

.iconWrapper {
  display: flex;
  padding: 0 ($kz-var-spacing-sm);

  @include ca-media-tablet {
    text-align: center;
    padding: $kz-var-spacing-sm;
    width: auto;
  }

  @include ca-media-mobile {
    display: none;
  }
}

.descriptionContainer {
  flex: 0 1 auto;
  margin: ($kz-var-spacing-sm) 0;
  text-align: center;
  max-width: 780px;
  box-sizing: border-box;

  @include ca-media-desktop {
    padding-left: $kz-var-spacing-sm;
    text-align: left;
  }
}

.buttonContainer {
  display: flex;
  flex: 1 0 auto;
  justify-content: center;
  flex-direction: row-reverse;

  width: 100%;

  @include ca-media-tablet-and-up {
    width: auto;
    padding: ($kz-var-spacing-sm) 0;
    text-align: center;
  }

  @include ca-media-desktop {
    margin-top: 0;
  }
}

.secondaryAction {
  margin-right: $kz-var-spacing-md;
}

.hidden {
  opacity: 0;
  margin-bottom: 0;
}

.headingWrapper {
  margin-bottom: $kz-var-spacing-md;
}

.cancel {
  @include button-reset;
  composes: interactiveIconWrapper from "~@kaizen/component-library/components/Icon/Icon.module.scss";
  position: absolute;
  top: $kz-var-spacing-sm;
  right: $kz-var-spacing-sm;
  color: $kz-var-color-wisteria-800;
}

.prominent {
  background: $kz-var-color-cluny-100;
}

